fix whitespace caused by animation overflow

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 3em;
+    overflow-x: hidden;
 }
 
 header {
@@ -65,6 +66,7 @@ header {
     gap: 1em;
     position: relative;
     padding-top: 2rem;
+    overflow-x: hidden;
 }
 
 header::before {
